added even, even more documentation

--- a/multiple-cluster-engine.ipynb
+++ b/multiple-cluster-engine.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Multiple Cluster Engine (MCE) Usage\n",
+    "## Multiple Cluster Engine (MCE) Usage\n",
     "Hello! Thank you for considering using the Multiple Cluster Engine.  \n",
     "Here's when you WANT to use this engine:\n",
     "* When you want to perform map-reduce on your data, which is constrained to 1 large machine (lots of RAM and CPUs) probably due to security concerns of migrating your data to other machines.  \n",
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Motivtion for Using the Multiple Cluster Engine\n",
+    "## Motivtion for Using the Multiple Cluster Engine\n",
     "The motivation is that the MCE is quite fast for large datasets, as it performs all calculations in RAM as opposed to a traditional map-reduce job which after the mapping steps, saves data to disk, sorts, shuffles, and load back to RAM. Traditional map-reduce is slower in that the reducing step cannot start until the entirety of the mapping step is completed. Any operations involving saving to disk instead of in RAM will be much slower. The MCE overcomes this hurdle in that each CPU in a cluster is effectively isolated from each other and performs BOTH mapping and reducing steps and thus isn't dependent on the completion of other CPUs in its cluster.  \n",
     "__CAVEAT:__ With enough money for many machines and with a dataset large enough, traditional map-reduce can still be faster. Basically, 20 small machines might be faster than 1 large machine--and it maybe be possible that 20 small machines might be cheaper if runtime is significantly reduced. "
    ]
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### How the Multiple Cluster Engine Works\n",
+    "## How the Multiple Cluster Engine Works\n",
     "The Multiple Cluster Engine allows vertical scaling on a large machine in place of horizontal scaling where you use multiple small machines. Here is the original paper called \"Multi-Cluster Engine: A Pragmatic Approach to Big Data\"  (https://docs.google.com/document/d/17-ItaCOXHbSqa2YmykpU4_PyC8--8bdMhEBGKjEURQo/edit), describing our approached of performing map-reduce to extract features from large datasets.  \n",
     "A high-level explanation of MCE: Each CPU is effectively a complete map-reduce job on its PARTITION of the user IDs. Each cluster composed of CPUs extracts features for ALL the user IDs for the input file. Multiple clusters can extract features for multiple files simultaneously.  \n",
     "\n",
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Practical Advice about the Multiple Cluster Engine\n",
+    "## Practical Advice about the Multiple Cluster Engine\n",
     "* MCE setup assumes that the number of CPUs for clusters are ordered from most to fewest (i.e. cluster0: 5 CPUs, cluster1: 4 CPUs, cluster2: 3 CPUs) and the list of input files are ordered from largest to smallest (i.e. 60 GB, 40 GB, 20 GB). The reason is that in MCE, cluster0 receives the leftmost/largest files in the list, and all other clusters receive files from the rightmost/smallest files; when MCE finishes all the files, the last file to be processed will actually be somewhere in the middle of the input list. The idea for the double-ended queue is to load balance the RAM. A counter-factual example is that if you queued up files from smallest to largest, the files at the end would take too much RAM as large files would be loaded into RAM simultaneously and ultimately crashing the RAM. Luckily, the MCE constantly profiles RAM and will kill the cluster using the most RAM after exceeding the user's preset RAM limit, so this will never happen. Nonetheless, killing a cluster means you are operating with fewer clusters.  \n",
     "* Here is the tradeoff you experience to optimize the objective function (reducing run time): CPU, RAM, and storage.\n",
     "* More CPUs in a single cluster means that for 1 file the reducing step will be faster (fewer user IDs per CPU) but the mapping step will still take the same time (every CPU will read the entire file). However, more CPUs in 1 cluster means you can't put the CPUs on other clusters. More clusters means processing more files simultaneously. However, more clusters also mean using more RAM as each file will be loaded into RAM.  \n",
@@ -69,19 +69,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cool Built-In Features:\n",
+    "## Cool Built-In Features:\n",
     "* Profiles RAM for each cluster (and sums total to get total RAM for entire MCE) every ```wait_time_in_seconds``` and saves to ```ram_usage.log```. If RAM of all clusters exceed user's preset RAM limit, then MCE will automatically kill the cluster using the most RAM (in practice, probably cluster0) AND write to ```failure.log``` which cluster got killed and which file it was working on at the time. \n",
     "* If the function put into MCE failed (like typeError, DivisionByZero, etc.), then that failure exception will be written into ```failure.log``` along with which cluster on which file. This is useful because the invoice data is frankly not always standardized--sometimes the delimiters change, sometimes the headers change, etc. Basically, the ```failure.log``` file tells you what went wrong on which file. However, to debug your function, you have to have to run the function without MCE but pass in arguments that MCE would have passed in, in order to reproduce the error as well as determine which line the code failed on. \n",
     "* After setting up MCE, the main() method will create the final output directory, start all the clusters, run the clusters where files are sent to the clusters, and then killing all the clusters at the end. Ideally everything is self contained. Occasionally, if there is an error and MCE stops running, you have to go to ```htop``` and find if there are any cluster processes still alive and manually kill them using ```ipcluster stop --profile=cluster_name_here```\n",
     "* Each time you run MCE, MCE will create a new final output directory. Hence, you can safely run the same code multiple times and not overwrite your previous output. \n",
-    "* Written and tested to be Python 3 and 2 compliant. In terms of RAM, Python 2 is a bit greedy in that it doesn't release all unused memory to the OS. The benefit for Python 3 is that it releases more (but not all) unused memory back to the OS. For example, if you create a large list in Python 2 and delete it, the amount of free RAM is lower than before. In Python 3 if you create a large list and delete it, the amount of free RAM is higher than that of Python 2. This is important in that when processing large files in MCE, each CPU will have some RAM attached after its finished processing its file, despite having no variables in its namespace. You want to have the smallest RAM footprint when each CPU finishes what its doing, so you can have more clusters. "
+    "* Written and tested to be Python 3 and 2 compliant. In terms of RAM, Python 2 is a bit greedy in that it doesn't release all unused memory to the OS. The benefit for Python 3 is that it releases more (but not all) unused memory back to the OS. For example, if you create a large list in Python 2 and delete it, the amount of free RAM is lower than before. In Python 3 if you create a large list and delete it, the amount of free RAM is higher than that of Python 2. This is important in that when processing large files in MCE, each CPU will have some RAM attached after its finished processing its file, despite having no variables in its namespace. You want to have the smallest RAM footprint when each CPU finishes what its doing, so you can have more clusters.  \n",
+    "* A nice library called tqdm creates a progress bar. Basically, when you run the MCE.main() method and after starting up all the clusters, a progress bar shows up and updates how much time has elapsed and predicted time remaining.  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Area for Future Improvements\n",
+    "## Area for Future Improvements\n",
     "* Allow queue instead of double-ended queue for input file lists. The motivation is that you actually want the results from some input files before others in a predictable way. This should be actually quite easy.\n",
     "* Currently, if a cluster is running smoothly, it will never kill itself. Suppose RAM accumulates because of a memory leak, then implement a method to kill and restart the cluster. This should be easy. Personally, I don't know if memory leaks will be a big issue, so I didn't build this feature.\n",
     "* If a cluster is killed, then perhaps in the future, turn that cluster back on--basically self-regenertion. This will be quite difficult for lots of reasons. For practical purposes, I do not see this as a feature, as there can be many things that can go wrong. "
@@ -96,18 +97,6 @@
     "* A more extensive coverage of ipyparallel at https://github.com/DaanVanHauwermeiren/ipyparallel-tutorial\n",
     "* I drew inspiration for MCE from MRJob, a library that makes map-reduce easier using OOP. Here's my MRJob example done in less than 10 lines of code: https://github.com/eugeneh101/ipyparallel-vs-MRJob/blob/master/ipyparallel_example_vs_mrjob.ipynb\n",
     "* This MRJob tutorial shows how you can deploy Map-reduce on AWS EMR using very little code. The only caveat is I was able to use MRJob locally but never figured out how set up the AWS EMR version correctly. https://github.com/donnemartin/data-science-ipython-notebooks/blob/master/mapreduce/mapreduce-python.ipynb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# write shell script for configuration and installation\n",
-    "# unittest with a mapper/reducer?"
    ]
   },
   {
@@ -420,7 +409,7 @@
     "                jth_cluster = next(self.cluster_indexes)                \n",
     "                if (not self.async_results_dict[jth_cluster][-1:]\n",
     "                        or self.async_results_dict[jth_cluster][-1].done()): # check if cluster j is available                       \n",
-    "                        self.clear_memory_on_cluster(jth_cluster)\n",
+    "                    self.clear_memory_on_cluster(jth_cluster)\n",
     "                    self.check_if_function_in_cluster_failed(jth_cluster) # check if previous file failed to process\n",
     "                    if jth_cluster == 0: # send large files to large cluster (which ALWAYS has id == 0)\n",
     "                        index = big_file_ctr\n",
@@ -472,25 +461,34 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# unittest with a mapper/reducer?"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
