cleaned up documentation

--- a/multiple-cluster-engine.ipynb
+++ b/multiple-cluster-engine.ipynb
@@ -73,7 +73,7 @@
     "* Profiles RAM for each cluster (and sums total to get total RAM for entire MCE) every ```wait_time_in_seconds``` and saves to ```ram_usage.log```. If RAM of all clusters exceed user's preset RAM limit, then MCE will automatically kill the cluster using the most RAM (in practice, probably cluster0) AND write to ```failure.log``` which cluster got killed and which file it was working on at the time. \n",
     "* If the function put into MCE failed (like typeError, DivisionByZero, etc.), then that failure exception will be written into ```failure.log``` along with which cluster on which file. This is useful because the invoice data is frankly not always standardized--sometimes the delimiters change, sometimes the headers change, etc. Basically, the ```failure.log``` file tells you what went wrong on which file. However, to debug your function, you have to have to run the function without MCE but pass in arguments that MCE would have passed in, in order to reproduce the error as well as determine which line the code failed on. \n",
     "* After setting up MCE, the main() method will create the final output directory, start all the clusters, run the clusters where files are sent to the clusters, and then killing all the clusters at the end. Ideally everything is self contained. Occasionally, if there is an error and MCE stops running, you have to go to ```htop``` and find if there are any cluster processes still alive and manually kill them using ```ipcluster stop --profile=cluster_name_here```\n",
-    "* Each time you run MCE, MCE will create a new final output directory. Hence, you can safely run the same code multiple times and not overwrite your previous output. \n",
+    "* Each time you run MCE, MCE will create a new final output directory (output directory will be incremented each time, so the latest MCE run will be the highest number). Hence, you can safely run the same code multiple times and not overwrite your previous output. \n",
     "* Written and tested to be Python 3 and 2 compliant. In terms of RAM, Python 2 is a bit greedy in that it doesn't release all unused memory to the OS. The benefit for Python 3 is that it releases more (but not all) unused memory back to the OS. For example, if you create a large list in Python 2 and delete it, the amount of free RAM is lower than before. In Python 3 if you create a large list and delete it, the amount of free RAM is higher than that of Python 2. This is important in that when processing large files in MCE, each CPU will have some RAM attached after its finished processing its file, despite having no variables in its namespace. You want to have the smallest RAM footprint when each CPU finishes what its doing, so you can have more clusters.  \n",
     "* A nice library called tqdm creates a progress bar. Basically, when you run the MCE.main() method and after starting up all the clusters, a progress bar shows up and updates how much time has elapsed and predicted time remaining.  "
    ]
@@ -468,7 +468,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# unittest with a mapper/reducer?"
+    "# unittest with a mapper/reducer?\n",
+    "# Comment on what the logs will say for sanity_test"
    ]
   }
  ],
