corrected some bash commands

--- a/Configuring_VM_with_Python.ipynb
+++ b/Configuring_VM_with_Python.ipynb
@@ -11,14 +11,10 @@
     "2) After your instance starts, under \"INSTANCES\" click on \"Instances\" button to see all your instances.  \n",
     "3) On the far right side (you probably have to scroll to the right side), under the \"Security Group\" tab, click on your instance, which will probably say \"launch-wizard-xx\".  \n",
     "4) At the bottom of the screen, click \"Inbound\" tab, then \"Edit\", and then \"Add Rule\".  Set Port Range to be 8888 and the Source is 0.0.0.0/0  \n",
-    "5) After ssh-ing into your instance, run the following bash commands\n",
+    "5) After ssh-ing into your instance, run the following bash commands. You can simply copy and paste the whole thing at once though line by line is probably safer. Or you can save to a bash script and run it from Terminal.\n",
     "\n",
     "```bash\n",
-    "sudo apt-get update -y && sudo apt-get upgrade -y # update kernel  \n",
-    "sudo apt install -y htop\n",
-    "sudo apt-get install -y git-all\n",
-    "\n",
-    "wget https://repo.continuum.io/archive/Anaconda3-5.1.0-Linux-x86_64.sh -P /home/ubuntu # actually is Python 3.6  \n",
+    "wget https://repo.continuum.io/archive/Anaconda3-5.1.0-Linux-x86_64.sh -P /home/ubuntu # actually is Python 3.6.4  \n",
     "bash Anaconda3-5.1.0-Linux-x86_64.sh -b\n",
     "echo 'export PATH=\"/home/ubuntu/anaconda3/bin:$PATH\"' >> ~/.bashrc # append PATH variable so Terminal knows where to look when you use ipython or Jupyter Notebook   \n",
     "source ~/.bashrc # have the Terminal recognize \"python\"\n",
@@ -27,13 +23,16 @@
     "conda update -y conda\n",
     "conda install -y ipyparallel\n",
     "conda install -y tqdm # just a cool library to show a progress meter\n",
+    "\n",
+    "sudo apt-get update && sudo apt-get install -y git htop\n",
+    "\n",
     "```\n",
     "#### Installing Python 2 as Conda Environment\n",
     "If you want both Python 3 and 2, you can use a virtual environment. I personally prefer conda environment which is easier to use (allows both conda and pip installs)\n",
     "```bash\n",
     "conda create -y -n py27 python=2.7 anaconda # to install Python 2 if Python 3 already exists  \n",
     "source activate py27 # to turn on the Python 2 kernel\n",
-    "# you have to install all the extra libraries you use (ipyparallel, etc.) while you are in Python 2.7 environment\n",
+    "# you have to install all the extra libraries you use (ipyparallel, tqdm) while you are in Python 2.7 environment\n",
     "source deactivate # to turn off Python 2 kernel  \n",
     "```"
    ]
@@ -45,7 +44,8 @@
     "## Jupyter Notebook\n",
     "To turn on Jupyter Notebook, just type the following into the Terminal\n",
     "```jupyter notebook --no-browser --ip=0.0.0.0``` \n",
-    "If you want to have a more secure way of connecting to Jupyter Notebook, you'll have to ask Aaditya for advice!\n",
+    "If you want a more secure way of connecting to Jupyter Notebook, you'll have to ask Aaditya for advice! The good thing is that when Python 3's Jupyter Notebook starts up, it prints a password token, which you copy and paste into the browser for Jupyter Notebook. Python 2's Jupyter Notebook does not have this token password. I use ```tmux``` when I use Jupyter Notebook to make sure I don't accidentally stop the notebook server. \n",
+    "\n",
     "\n",
     "#### Caveat\n",
     "If you ever get problems with matploblib, then restart your kernal.\n",
